# srsRAN_Project_GPIO

./: gnb_b210_20MHz_oneplus_8t.yml
apps/gnb/: gnb_appconfig_translators.cpp
configs/: custom_B210_20MHZ.yml
include/srsran/gateways/baseband/: baseband_gateway_transmitter.h
include/srsran/phy/lower/: lower_phy_configuration.h
include/srsran/phy/lower/processors/downlink/: downlink_processor_baseband.h  downlink_processor_factories.h
include/srsran/ran/tdd/: tdd_ul_dl_config.h
lib/phy/lower/: lower_phy_baseband_processor.cpp  lower_phy_baseband_processor.cpp.rej  lower_phy_baseband_processor.cpp.save  lower_phy_baseband_processor.h  lower_phy_factory.cpp
lib/phy/lower/processors/downlink/: CMakeLists.txt  downlink_processor_baseband_impl.cpp  downlink_processor_baseband_impl.h  downlink_processor_factories.cpp
lib/radio/uhd/: CMakeLists.txt  radio_uhd_device.h  radio_uhd_tx_stream.cpp  radio_uhd_tx_stream.h  radio_uhd_tx_stream_fsm.h  radio_uhd_tx_stream_fsm.h.save
lib/ran/: tdd_ul_dl_config.cpp
tests/unittests/ofh/compression/: CMakeLists.txt
tests/unittests/phy/generic_functions/: CMakeLists.txt
tests/unittests/phy/lower/modulation/: CMakeLists.txt
tests/unittests/phy/lower/processors/downlink/: downlink_processor_test_doubles.h  lower_phy_downlink_processor_test.cpp
tests/unittests/phy/upper/channel_coding/ldpc/: CMakeLists.txt
tests/unittests/phy/upper/channel_coding/short/: CMakeLists.txt
tests/unittests/phy/upper/channel_modulation/: CMakeLists.txt
tests/unittests/phy/upper/channel_processors/: CMakeLists.txt
tests/unittests/phy/upper/channel_processors/pusch/: CMakeLists.txt
tests/unittests/phy/upper/equalization/: CMakeLists.txt
tests/unittests/phy/upper/signal_processors/: CMakeLists.txt
